# demon

./: .gitignore  CMakeLists.txt  Makefile  Master Bank.strings.bank  README.md  TODO.md  main.cpp  maker.sh  oneshot.cpp  player.bank  player.lua
demon/: demon.sln
demon/Debug/: Master Bank.bank  Master Bank.strings.bank  demon.ilk
demon/demon/: demon.vcxproj  demon.vcxproj.filters
demon/demon/Debug/: vc140.idb
demon/demon/Debug/demon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  demon.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: audioengine.hpp  audioengine.hpp.orig  luahelpers.hpp  oneshot.hpp  physicsbody.hpp  physicsengine.hpp  player.hpp  rect.hpp  renderer.hpp  sdlhelpers.hpp  sprite.hpp  texture_t.hpp  textures.hpp  timer.hpp
res/banks/: Master Bank.bank  Master Bank.strings.bank  player.bank  starcraft.bank
res/scripts/: box.lua  floor.lua  player.lua  settings.lua
src/: audioengine.cpp  luahelpers.cpp  main.cpp  oneshot.cpp  physicsbody.cpp  physicsengine.cpp  player.cpp  rect.cpp  renderer.cpp  sprite.cpp  texture_t.cpp  textures.cpp  timer.cpp
